--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
     "react-test-renderer": "16.8.3",
+    "tslint": "^5.18.0",
     "typescript": "^3.5.2"
   },
   "jest": {
