--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "dependencies": {
     "@types/react-redux": "^7.1.1",
+    "aws-amplify": "^1.1.30",
+    "aws-amplify-react-native": "^2.1.14",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-scripts": "^2.0.1",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1"
