--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-root-toast": "^3.1.2",
     "react-native-scripts": "^2.0.1",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
