--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.138",
     "@types/react-redux": "^7.1.1",
     "aws-amplify": "^1.1.30",
     "aws-amplify-react-native": "^2.1.14",
+    "lodash": "^4.17.15",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
