--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@project-300/common-types": "^1.0.7",
     "@types/lodash": "^4.14.138",
     "@types/react-redux": "^7.1.1",
     "aws-amplify": "^1.1.30",
