--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-image-resizer')
+    implementation project(':react-native-image-picker')
     implementation project(':amazon-cognito-identity-js')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
