--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "lodash": "^4.17.15",
     "react": "16.8.3",
     "react-native": "0.59.9",
+    "react-native-aws3": "0.0.9",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-picker": "^0.27.0",
+    "react-native-image-resizer": "^1.0.1",
     "react-native-root-toast": "^3.1.2",
     "react-native-scripts": "^2.0.1",
     "react-navigation": "^3.11.0",
