--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.27.0",
     "react-native-image-resizer": "^1.0.1",
+    "react-native-maps": "^0.24.2",
     "react-native-root-toast": "^3.1.2",
     "react-native-scripts": "^2.0.1",
     "react-native-vector-icons": "^6.6.0",
