Center Route Midpoint

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "email-validator": "^2.0.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "geolib": "^3.1.0",
     "lodash": "^4.17.15",
     "react": "16.8.3",
     "react-native": "0.59.9",
