--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@mapbox/polyline": "^1.1.0",
-    "@project-300/common-types": "^1.1.2",
+    "@project-300/common-types": "^1.1.4",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/googlemaps": "^3.38.1",
     "@types/lodash": "^4.14.138",
     "@types/mapbox__polyline": "^1.0.0",
     "@types/react-native-vector-icons": "^6.4.2",
