--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/googlemaps": "^3.38.1",
     "@types/lodash": "^4.14.138",
     "@types/mapbox__polyline": "^1.0.0",
+    "@types/react-native-loading-spinner-overlay": "^0.5.1",
     "@types/react-native-vector-icons": "^6.4.2",
     "@types/react-redux": "^7.1.1",
     "aws-amplify": "^1.1.28",
@@ -31,6 +32,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.27.0",
     "react-native-image-resizer": "^1.0.1",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-maps": "^0.24.2",
     "react-native-root-toast": "^3.1.2",
     "react-native-scripts": "^2.0.1",
