--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "lodash": "^4.17.15",
+    "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-aws3": "0.0.9",
