--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-image-resizer": "^1.0.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-maps": "^0.24.2",
+    "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-root-toast": "^3.1.2",
     "react-native-scripts": "^2.0.1",
     "react-native-vector-icons": "^6.6.0",
