--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "tslint --project tsconfig.json"
   },
   "dependencies": {
-    "@project-300/common-types": "^1.2.1",
+    "@mapbox/polyline": "^1.1.0",
+    "@project-300/common-types": "^1.3.4",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/lodash": "^4.14.138",
+    "@types/mapbox__polyline": "^1.0.0",
+    "@types/react-native-loading-spinner-overlay": "^0.5.1",
     "@types/react-native-vector-icons": "^6.4.2",
     "@types/react-redux": "^7.1.1",
     "aws-amplify": "^1.1.28",
@@ -27,6 +30,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.27.0",
     "react-native-image-resizer": "^1.0.1",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-maps": "^0.24.2",
     "react-native-root-toast": "^3.1.2",
     "react-native-scripts": "^2.0.1",
