--- a/package.json
+++ b/package.json
@@ -8,56 +8,56 @@
     "lint": "tslint --project tsconfig.json"
   },
   "dependencies": {
-    "@mapbox/polyline": "^1.1.0",
-    "@project-300/common-types": "^1.4.0",
-    "@types/enzyme": "^3.10.3",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/googlemaps": "^3.38.1",
-    "@types/lodash": "^4.14.138",
-    "@types/mapbox__polyline": "^1.0.0",
-    "@types/react-native-loading-spinner-overlay": "^0.5.1",
-    "@types/react-native-vector-icons": "^6.4.2",
-    "@types/react-redux": "^7.1.1",
-    "aws-amplify": "^1.1.28",
-    "aws-amplify-react-native": "^2.1.14",
-    "email-validator": "^2.0.4",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "geolib": "^3.1.0",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "native-base": "^2.13.8",
+    "@mapbox/polyline": "1.1.0",
+    "@project-300/common-types": "1.4.0",
+    "@types/enzyme": "3.10.3",
+    "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/googlemaps": "3.38.1",
+    "@types/lodash": "4.14.138",
+    "@types/mapbox__polyline": "1.0.0",
+    "@types/react-native-loading-spinner-overlay": "0.5.1",
+    "@types/react-native-vector-icons": "6.4.2",
+    "@types/react-redux": "7.1.1",
+    "aws-amplify": "1.1.28",
+    "aws-amplify-react-native": "2.1.14",
+    "email-validator": "2.0.4",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0",
+    "geolib": "3.1.0",
+    "lodash": "4.17.15",
+    "moment": "2.24.0",
+    "native-base": "2.13.8",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-aws3": "0.0.9",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-image-picker": "^0.27.0",
-    "react-native-image-resizer": "^1.0.1",
-    "react-native-loading-spinner-overlay": "^1.0.1",
-    "react-native-maps": "^0.24.2",
-    "react-native-modal-datetime-picker": "^7.6.0",
-    "react-native-root-toast": "^3.1.2",
-    "react-native-scripts": "^2.0.1",
-    "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.11.0",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "react-native-gesture-handler": "1.3.0",
+    "react-native-image-picker": "0.27.0",
+    "react-native-image-resizer": "1.0.1",
+    "react-native-loading-spinner-overlay": "1.0.1",
+    "react-native-maps": "0.24.2",
+    "react-native-modal-datetime-picker": "7.6.0",
+    "react-native-root-toast": "3.1.2",
+    "react-native-scripts": "2.0.1",
+    "react-native-vector-icons": "6.6.0",
+    "react-navigation": "3.11.0",
+    "react-redux": "7.1.0",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/runtime": "^7.4.5",
-    "@types/jest": "^24.0.15",
-    "@types/react": "^16.8.22",
-    "@types/react-native": "^0.57.64",
-    "@types/react-test-renderer": "^16.8.2",
-    "babel-jest": "^24.9.0",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.54.1",
-    "react-dom": "^16.10.2",
+    "@babel/core": "7.4.5",
+    "@babel/runtime": "7.4.5",
+    "@types/jest": "24.0.15",
+    "@types/react": "16.8.22",
+    "@types/react-native": "0.57.64",
+    "@types/react-test-renderer": "16.8.2",
+    "babel-jest": "24.9.0",
+    "jest": "24.9.0",
+    "metro-react-native-babel-preset": "0.54.1",
+    "react-dom": "16.10.2",
     "react-test-renderer": "16.8.3",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.2"
+    "tslint": "5.18.0",
+    "typescript": "3.5.2"
   },
   "jest": {
     "preset": [
