--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react-test-renderer": "16.8.2",
     "babel-jest": "24.9.0",
     "jest": "24.9.0",
+    "jetifier": "1.6.5",
     "metro-react-native-babel-preset": "0.54.1",
     "react-dom": "16.10.2",
     "react-test-renderer": "16.8.3",
