--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-root-toast": "3.1.2",
     "react-native-scripts": "2.0.1",
     "react-native-svg": "11.0.1",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "6.6.0",
     "react-navigation": "3.11.0",
     "react-redux": "7.1.0",
