--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-loading-spinner-overlay": "1.0.1",
     "react-native-maps": "0.24.2",
     "react-native-modal-datetime-picker": "7.6.0",
+    "react-native-reanimated": "1.1.0",
     "react-native-root-toast": "3.1.2",
     "react-native-scripts": "2.0.1",
     "react-native-svg": "11.0.1",
