--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-gesture-handler": "1.3.0",
     "react-native-image-picker": "0.27.0",
     "react-native-image-resizer": "1.0.1",
+    "react-native-iphone-x-helper": "^1.2.1",
     "react-native-loading-spinner-overlay": "1.0.1",
     "react-native-maps": "0.24.2",
     "react-native-modal-datetime-picker": "7.6.0",
@@ -41,6 +42,7 @@
     "react-native-scripts": "2.0.1",
     "react-native-svg": "11.0.1",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-toaster": "git+https://github.com/AndriiUhryn/react-native-toaster.git",
     "react-native-vector-icons": "6.6.0",
     "react-navigation": "3.11.0",
     "react-redux": "7.1.0",
