--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-loading-spinner-overlay": "1.0.1",
     "react-native-maps": "0.24.2",
     "react-native-modal-datetime-picker": "7.6.0",
+    "react-native-paper": "^3.5.1",
     "react-native-reanimated": "1.1.0",
     "react-native-root-toast": "3.1.2",
     "react-native-scripts": "2.0.1",
@@ -44,6 +45,7 @@
     "react-native-svg-transformer": "0.14.3",
     "react-native-vector-icons": "6.6.0",
     "react-navigation": "3.11.0",
+    "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-redux": "7.1.0",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0"
