--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@mapbox/polyline": "1.1.0",
-    "@project-300/common-types": "2.0.0",
+    "@project-300/common-types": "2.1.0",
     "@types/enzyme": "3.10.3",
     "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/googlemaps": "3.38.1",
@@ -47,7 +47,7 @@
     "react-navigation": "3.11.0",
     "react-navigation-material-bottom-tabs": "2.1.5",
     "react-redux": "7.1.0",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.18",
+    "reanimated-bottom-sheet": "1.0.0-alpha.18",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0"
   },
