--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "@mapbox/polyline": "1.1.0",
-    "@project-300/common-types": "^3.0.2",
+    "@project-300/common-types": "^3.2.5",
     "@types/enzyme": "3.10.3",
     "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/googlemaps": "3.38.1",
     "@types/lodash": "4.14.138",
     "@types/mapbox__polyline": "1.0.0",
     "@types/react-native-loading-spinner-overlay": "0.5.1",
+    "@types/react-native-modal-filter-picker": "^1.3.2",
     "@types/react-native-vector-icons": "6.4.2",
     "@types/react-redux": "7.1.1",
     "aws-amplify": "1.1.28",
@@ -37,6 +38,7 @@
     "react-native-loading-spinner-overlay": "1.0.1",
     "react-native-maps": "0.24.2",
     "react-native-modal-datetime-picker": "7.6.0",
+    "react-native-modal-filter-picker": "^2.0.0",
     "react-native-paper": "3.5.1",
     "react-native-reanimated": "1.1.0",
     "react-native-root-toast": "3.1.2",
