--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-native-loading-spinner-overlay": "0.5.1",
     "@types/react-native-vector-icons": "6.4.2",
     "@types/react-redux": "7.1.1",
+    "@types/uuid": "^3.4.7",
     "aws-amplify": "1.1.28",
     "aws-amplify-react-native": "2.1.14",
     "email-validator": "2.0.4",
@@ -49,7 +50,8 @@
     "react-redux": "7.1.0",
     "reanimated-bottom-sheet": "1.0.0-alpha.18",
     "redux": "4.0.1",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
