--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-scripts": "2.0.1",
     "react-native-svg": "11.0.1",
     "react-native-svg-transformer": "0.14.3",
+    "react-native-swipe-gestures": "^1.0.4",
     "react-native-vector-icons": "6.6.0",
     "react-navigation": "3.11.0",
     "react-navigation-material-bottom-tabs": "2.1.5",
